finishing the portfolio-summary report